--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="container">
         <!-- Product 1 -->
         <div class="product">
-            <img src="bio.png" alt="Product 1">
+            <img src="images/bio.png" alt="Product 1">
             <h3>Product 1</h3>
             <p>₱20.00</p>
             <p>Stock: <span id="stock-product-1">10</span></p>
