--- a/index.html
+++ b/index.html
@@ -107,34 +107,187 @@
     <div class="container">
         <!-- Product 1 -->
         <div class="product">
-            <img src="images/bio.png" alt="Product 1">
-            <h3>Product 1</h3>
-            <p>₱20.00</p>
+            <img src="images/glossypp.jpg" alt="Product 1">
+            <h3>Glossy Photo Paper (Long)</h3>
+            <p>₱10.00</p>
             <p>Stock: <span id="stock-product-1">10</span></p>
             <input type="number" id="qty-product-1" min="1" max="10" value="1">
-            <button id="btn-product-1" onclick="addToCart('Product 1', 20, 1)">Add to Cart</button>
+            <button id="btn-product-1" onclick="addToCart('Glossy Photo(L)', 10, 1)">Add to Cart</button>
             <button id="cancel-product-1" onclick="cancelFromCart(1)" disabled>Cancel</button>
         </div>
         <!-- Product 2 -->
         <div class="product">
-            <img src="images/non bio.png" alt="Product 2">
-            <h3>Product 2</h3>
-            <p>₱35.00</p>
-            <p>Stock: <span id="stock-product-2">15</span></p>
-            <input type="number" id="qty-product-2" min="1" max="15" value="1">
-            <button id="btn-product-2" onclick="addToCart('Product 2', 35, 2)">Add to Cart</button>
+            <img src="images/vellum.jpg" alt="Product 2">
+            <h3>Vellum Board (Short)</h3>
+            <p>₱7.00</p>
+            <p>Stock: <span id="stock-product-2">10</span></p>
+            <input type="number" id="qty-product-2" min="1" max="10" value="1">
+            <button id="btn-product-2" onclick="addToCart('Vellum Brd(S)', 7, 2)">Add to Cart</button>
             <button id="cancel-product-2" onclick="cancelFromCart(2)" disabled>Cancel</button>
         </div>
-        <!-- Product 3 -->
+<!-- Product 3 -->
         <div class="product">
-            <img src="images/hazard.jpg" alt="Product 3">
-            <h3>Product 3</h3>
-            <p>₱50.00</p>
-            <p>Stock: <span id="stock-product-3">8</span></p>
-            <input type="number" id="qty-product-3" min="1" max="8" value="1">
-            <button id="btn-product-3" onclick="addToCart('Product 3', 50, 3)">Add to Cart</button>
+            <img src="images/ballpen.jpg" alt="Product 3">
+            <h3>Ballpen Black</h3>
+            <p>₱5.00</p>
+            <p>Stock: <span id="stock-product-3">5</span></p>
+            <input type="number" id="qty-product-3" min="1" max="5" value="1">
+            <button id="btn-product-3" onclick="addToCart('Ballpen(Bk)', 5, 3)">Add to Cart</button>
             <button id="cancel-product-3" onclick="cancelFromCart(3)" disabled>Cancel</button>
         </div>
+
+<!-- Product 4 -->
+        <div class="product">
+            <img src="images/ballpen.jpg">
+            <h3>Ballpen Blue</h3>
+            <p>₱5.00</p>
+            <p>Stock: <span id="stock-product-4">4</span></p>
+            <input type="number" id="qty-product-4" min="1" max="4" value="1">
+            <button id="btn-product-4" onclick="addToCart('Ballpen(Bl)', 5, 4)">Add to Cart</button>
+            <button id="cancel-product-4" onclick="cancelFromCart(4)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 5 -->
+        <div class="product">
+            <img src="images/ballpen.jpg">
+            <h3>Ballpen Red</h3>
+            <p>₱5.00</p>
+            <p>Stock: <span id="stock-product-5">2</span></p>
+            <input type="number" id="qty-product-5" min="1" max="2" value="1">
+            <button id="btn-product-5" onclick="addToCart('Ballpen(Rd)', 5, 5)">Add to Cart</button>
+            <button id="cancel-product-5" onclick="cancelFromCart(5)" disabled>Cancel</button>
+        </div>
+
+
+ <!-- Product 6 -->
+        <div class="product">
+            <img src="images/pencil.jpg">
+            <h3>Target Pencil</h3>
+            <p>₱6.00</p>
+            <p>Stock: <span id="stock-product-6">10</span></p>
+            <input type="number" id="qty-product-6" min="1" max="10" value="1">
+            <button id="btn-product-6" onclick="addToCart('Pencil', 6, 6)">Add to Cart</button>
+            <button id="cancel-product-6" onclick="cancelFromCart(6)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 7 -->
+        <div class="product">
+            <img src="images/stickerpaper.jpg">
+            <h3>Sticker Paper</h3>
+            <p>₱10.00</p>
+            <p>Stock: <span id="stock-product-7">10</span></p>
+            <input type="number" id="qty-product-7" min="1" max="10" value="1">
+            <button id="btn-product-7" onclick="addToCart('Sticker Ppr', 10, 7)">Add to Cart</button>
+            <button id="cancel-product-7" onclick="cancelFromCart(7)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 8 -->
+        <div class="product">
+            <img src="images/blackclip.jpg">
+            <h3>Black Clip (Small)</h3>
+            <p>₱5.00</p>
+            <p>Stock: <span id="stock-product-8">3</span></p>
+            <input type="number" id="qty-product-8" min="1" max="3" value="1">
+            <button id="btn-product-8" onclick="addToCart('Clip (S)', 5, 8)">Add to Cart</button>
+            <button id="cancel-product-8" onclick="cancelFromCart(8)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 9 -->
+        <div class="product">
+            <img src="images/blackclip.jpg">
+            <h3>Black Clip (Medium)</h3>
+            <p>₱7.00</p>
+            <p>Stock: <span id="stock-product-9">3</span></p>
+            <input type="number" id="qty-product-9" min="1" max="3" value="1">
+            <button id="btn-product-9" onclick="addToCart('Clip (M)', 7, 9)">Add to Cart</button>
+            <button id="cancel-product-9" onclick="cancelFromCart(9)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 10 -->
+        <div class="product">
+            <img src="images/blackclip.jpg">
+            <h3>Black Clip (Large)</h3>
+            <p>₱10.00</p>
+            <p>Stock: <span id="stock-product-10">3</span></p>
+            <input type="number" id="qty-product-10" min="1" max="3" value="1">
+            <button id="btn-product-10" onclick="addToCart('Clip (L)', 10, 10)">Add to Cart</button>
+            <button id="cancel-product-10" onclick="cancelFromCart(10)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 11 -->
+        <div class="product">
+            <img src="images/scotch.jpg">
+            <h3>Scotch Tape (Medium)</h3>
+            <p>₱15.00</p>
+            <p>Stock: <span id="stock-product-11">5</span></p>
+            <input type="number" id="qty-product-11" min="1" max="5" value="1">
+            <button id="btn-product-11" onclick="addToCart('Scotch(M)', 15, 11)">Add to Cart</button>
+            <button id="cancel-product-11" onclick="cancelFromCart(11)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 12 -->
+        <div class="product">
+            <img src="images/sharpener.jpg">
+            <h3>Sharpener</h3>
+            <p>₱5.00</p>
+            <p>Stock: <span id="stock-product-12">5</span></p>
+            <input type="number" id="qty-product-12" min="1" max="5" value="1">
+            <button id="btn-product-12" onclick="addToCart('Sharpener', 5, 12)">Add to Cart</button>
+            <button id="cancel-product-12" onclick="cancelFromCart(12)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 13 -->
+        <div class="product">
+            <img src="images/glossysp.jpg">
+            <h3>Glossy Sticker Paper</h3>
+            <p>₱12.00</p>
+            <p>Stock: <span id="stock-product-13">5</span></p>
+            <input type="number" id="qty-product-13" min="1" max="5" value="1">
+            <button id="btn-product-13" onclick="addToCart('Glossy Sticker', 12, 13)">Add to Cart</button>
+            <button id="cancel-product-13" onclick="cancelFromCart(13)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 14 -->
+        <div class="product">
+            <img src="images/laminatelong.jpg">
+            <h3>Laminating Film (Long)</h3>
+            <p>₱35.00</p>
+            <p>Stock: <span id="stock-product-14">5</span></p>
+            <input type="number" id="qty-product-14" min="1" max="5" value="1">
+            <button id="btn-product-14" onclick="addToCart('Laminating F(L)', 35, 14)">Add to Cart</button>
+            <button id="cancel-product-14" onclick="cancelFromCart(14)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 15 -->
+        <div class="product">
+            <img src="images/laminateid.jpg">
+            <h3>Laminating Film (ID-S)</h3>
+            <p>₱5.00</p>
+            <p>Stock: <span id="stock-product-15">5</span></p>
+            <input type="number" id="qty-product-15" min="1" max="5" value="1">
+            <button id="btn-product-15" onclick="addToCart('Laminating ID(S)', 5, 15)">Add to Cart</button>
+            <button id="cancel-product-15" onclick="cancelFromCart(15)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 16 -->
+        <div class="product">
+            <img src="images/laminateid.jpg">
+            <h3>Laminating Film (ID-M)</h3>
+            <p>₱8.00</p>
+            <p>Stock: <span id="stock-product-16">5</span></p>
+            <input type="number" id="qty-product-16" min="1" max="5" value="1">
+            <button id="btn-product-16" onclick="addToCart('Laminating ID(M)', 8, 16)">Add to Cart</button>
+            <button id="cancel-product-16" onclick="cancelFromCart(16)" disabled>Cancel</button>
+        </div>
+
+
+
+
+
+
+
+
     </div>
 <center>
     <div class="cart" style="width:300px;">
@@ -173,7 +326,7 @@
     <script>
         let cart = [];
         let totalPrice = 0;
-        let stocks = { 1: 10, 2: 15, 3: 8 }; // Initial stock levels
+        let stocks = { 1: 10, 2: 10, 3: 5, 4:4, 5:2, 6:10, 7:10, 8:3, 9:3, 10:3, 11:5, 12:5, 13:5, 14:5, 15:5, 16:5, }; // Initial stock levels
 
         function addToCart(productName, price, productId) {
             const qtyInput = document.getElementById(`qty-product-${productId}`);
