--- a/school.html
+++ b/school.html
@@ -242,7 +242,7 @@
 
  <!-- Product 13 -->
         <div class="product">
-            <img src="images/glossysp.jpg">
+            <img src="images/glossyps.jpg">
             <h3>Glossy Sticker Paper</h3>
             <p>₱12.00</p>
             <p>Stock: <span id="stock-product-13">5</span></p>
