--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
     </nav>
 </header>
-<iframe width="100%" height="100%" src="services.html" name="iframe_ex">
+<iframe width="100%" height="100%" src="school.html" name="iframe_ex">
 </iframe>
 
 </body>
