--- a/school.html
+++ b/school.html
@@ -292,18 +292,6 @@
 
 
     </div>
-<center>
-    <div class="cart" style="width:300px;">
-        <h2>Shopping Cart</h2>
-        <ul id="cart-list">
-            <!-- Items will be added here -->
-        </ul>
-	<p>Service/Shipping Fee: ₱1.00</p>
-        <p id="total-price">Total: ₱0.00</p>
-
-        <button id="checkoutbutton" class="checkout-btn" onclick="checkout()" style="width:50%;">Checkout</button>
-    </div>
-</center>
 
 <center>
 <div id="details" style="width:300px;background:yellow;padding:10px;border-radius:15px;display:none;">
@@ -324,6 +312,21 @@
     </form>
 </div>
 </center>
+
+
+<center>
+    <div class="cart" style="width:300px;">
+        <h2>Shopping Cart</h2>
+        <ul id="cart-list">
+            <!-- Items will be added here -->
+        </ul>
+	<p>Service/Shipping Fee: ₱1.00</p>
+        <p id="total-price">Total: ₱0.00</p>
+
+        <button id="checkoutbutton" class="checkout-btn" onclick="checkout()" style="width:50%;">Checkout</button>
+    </div>
+</center>
+
 
 </body>
     <script>
@@ -398,7 +401,7 @@
             if (cart.length !== 0) {
 		document.getElementById('checkoutbutton').disabled = true;
 		details.style.display="block";
-            alert('Checkout successful! Total: ₱' + totalPrice.toFixed(2));
+            //alert('Checkout successful! Total: ₱' + totalPrice.toFixed(2));
 		}
            // cart = [];
             //totalPrice = 0;
