--- a/services.html
+++ b/services.html
@@ -107,8 +107,9 @@
 <h1 style="color:blue;">Other Services</h1>
 </center>
     </header>
+
     <div class="container">
-        <!-- Product 1 -->
+    <!-- Product 1 -->
         <div class="product">
             <img src="images1/id.jpg" alt="Product 1">
             <h3>ID Lamination (80mm X 110mm)</h3>
@@ -141,19 +142,12 @@
 
 
 
-    </div>
-<center>
-    <div class="cart" style="width:300px;">
-        <h2>Shopping Cart</h2>
-        <ul id="cart-list">
-            <!-- Items will be added here -->
-        </ul>
-	<p>Service/Shipping Fee: ₱5.00</p>
-        <p id="total-price">Total: ₱0.00</p>
 
-        <button id="checkoutbutton" class="checkout-btn" onclick="checkout()" style="width:50%;">Checkout</button>
+
+
+
+
     </div>
-</center>
 
 <center>
 <div id="details" style="width:300px;background:yellow;padding:10px;border-radius:15px;display:none;">
@@ -175,11 +169,26 @@
 </div>
 </center>
 
+
+<center>
+    <div class="cart" style="width:300px;">
+        <h2>Shopping Cart</h2>
+        <ul id="cart-list">
+            <!-- Items will be added here -->
+        </ul>
+	<p>Service/Shipping Fee: ₱1.00</p>
+        <p id="total-price">Total: ₱0.00</p>
+
+        <button id="checkoutbutton" class="checkout-btn" onclick="checkout()" style="width:50%;">Checkout</button>
+    </div>
+</center>
+
+
 </body>
     <script>
         let cart = [];
         let totalPrice = 0;
-        let stocks = { 1: 5, 2: 5, 3: 5,}; // Initial stock levels
+        let stocks = { 1: 5, 2: 5, 3: 5, }; // Initial stock levels
 
         function addToCart(productName, price, productId) {
             const qtyInput = document.getElementById(`qty-product-${productId}`);
@@ -235,7 +244,7 @@
                 li.textContent = `\n${item.name} - ₱${item.perprice} (x${item.qty}) - ₱${item.price.toFixed(2)}`;
                 cartList.appendChild(li);
             });
-		const totalPrice1 = totalPrice+5;//SHIPPING FEE IS 5.
+		const totalPrice1 = totalPrice+1;//SHIPPING FEE IS 1.
             document.getElementById('total-price').textContent = `Total: ₱${totalPrice1.toFixed(2)}`;
         }
 
@@ -248,7 +257,7 @@
             if (cart.length !== 0) {
 		document.getElementById('checkoutbutton').disabled = true;
 		details.style.display="block";
-            alert('Checkout successful! Total: ₱' + totalPrice.toFixed(2));
+            //alert('Checkout successful! Total: ₱' + totalPrice.toFixed(2));
 		}
            // cart = [];
             //totalPrice = 0;
@@ -284,7 +293,7 @@ document.getElementById('placebutton').disabled = true;
                 document.getElementById(`cancel-product-${productId}`).disabled = true;
             }//close
 
-            const fullMessage = `.\n\nFrom: One Click Store\nCustomer: ${name}\nAddress: ${address}\nNumber: ${number}\n----------------------------------- \nOrdered Items:\n${text}\nService/Shipping Fee - ₱5.00\n\n${total}\n\n-----------------------------------\nCompany Address: Bonbon Upper, Loboc, Bohol\nSuggest Products Through:\nContact Us: 09941101238\nFB Page: One Click Store\n\nTHANK YOU FOR SHOPPING WITH US!`;
+            const fullMessage = `.\n\nFrom: One Click Store\nCustomer: ${name}\nAddress: ${address}\nNumber: ${number}\nDate of Order: ${formattedDate}\nEstimated Date of Delivery\nFrom: ${formattedDate2}\nTo: ${formattedDate3}\n----------------------------------- \nOrdered Items:\n${text}\nService/Shipping Fee - ₱1.00\n\n${total}\n\n-----------------------------------\nCompany Address: Bonbon Upper, Loboc, Bohol\nSuggest Products Through:\nContact Us: 09941101238\nFB Page: One Click Store\n\nTHANK YOU FOR SHOPPING WITH US!`;
 
             fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
                 method: "POST",
@@ -313,9 +322,42 @@ document.getElementById('placebutton').disabled = true;
 //TELEGRAM CLOSE
 
 
+//DATE FOR TODAY OPEN  
+// Get the current date
+        const today = new Date();
 
+        // Format the date as a readable string
+        const options = { year: 'numeric', month: 'long', day: 'numeric' };
+        const formattedDate = today.toLocaleDateString(undefined, options);
+//DATE FOR TODAY CLOSE
 
+// DATE TOMORROW OPEN 
+// Get today's date
+        //const today = new Date();
 
+        // Add one day to today's date
+        //const tomorrow = new Date();
+        today.setDate(today.getDate() + 1);
+
+        // Format the date as a readable string
+        const options2 = { year: 'numeric', month: 'long', day: 'numeric' };
+        const formattedDate2 = today.toLocaleDateString(undefined, options2);
+
+// DATE TOMORROW CLOSE 
+
+// DATE TOMORROW OPEN 
+// Get today's date
+        //const today = new Date();
+
+        // Add one day to today's date
+        //const tomorrow = new Date();
+        today.setDate(today.getDate() + 2);
+
+        // Format the date as a readable string
+        const options3 = { year: 'numeric', month: 'long', day: 'numeric' };
+        const formattedDate3 = today.toLocaleDateString(undefined, options3);
+
+// DATE TOMORROW CLOSE 
 
 
     </script>
