--- a/school.html
+++ b/school.html
@@ -107,6 +107,18 @@
 <h1 style="color:blue;">School Supplies</h1>
 </center>
     </header>
+	<div style="padding:50px;left:100px;width:100%;">
+<p><b>UNSAON PAG-ORDER?</b></p>
+<p><b>1.</b> Pangitaa ang gusto nimong orderon sa ubos.</p>
+<p><b>2.</b> Pinduta ang "Add to Cart" kung aduna na kay napili.</p>
+<p><b>3.</b> Tan.awa sa kina-ubsan ang Shopping Cart kung naa naba sa lista ang imong order.</p>
+<p><b>4.</b> Kung naa pakay idugang nga order buhata balik ang pag add to cart.</p>
+<p><b>5.</b> Kung wala nakay orderon, pwedi na pinduton ang checkout sa kina-ubsan.</p>
+<p><b>6.</b> Sa yellow form, ibutang ang imong mga detalye. I-check pagbalik ang imong mobile number. </p>
+<p><b>7.</b> Pinduta ang "Place Order".</p>
+<p><b>8.</b> Humana. Paabuta ang ilang text sa imong cellphone para sa order update.</p>
+</div>
+	
     <div class="container">
         <!-- Product 1 -->
         <div class="product">
