--- a/homefashion.html
+++ b/homefashion.html
@@ -120,6 +120,10 @@
 <p><b>8.</b> Humana. Paabuta ang ilang text sa imong cellphone para sa order update.</p>
 </div>
 
+<center>
+<h1>Soon to open...</h1>
+</center>
+
     <div class="container">
     <!-- Product 1 -->
         <div class="product">
