--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Advanced Navigation Page</title>
+    <title>One Click Store</title>
 <style>
        /*menu,mo color black box kung naay pointer*/
             nav ul li:hover > a {
