--- a/school.html
+++ b/school.html
@@ -107,7 +107,24 @@
 <h1 style="color:blue;">School Supplies</h1>
 </center>
     </header>
-	<div style="padding:50px;left:100px;width:100%;">
+<center>
+<div id="update" style="width:100%;color:red;">
+<h1>(NEW ANNOUNCEMENT)</h1>
+<h1>Ten costumers  per day will received 1 FREE product.</h1>
+<h1>Starting from December 2-5, 2024</h1>
+</div>
+</center>
+
+<center>
+<div id="announce" style="width:100%;display:none;">
+<h1>ORDER DONE!</h1>
+<p>THANK YOU FOR CHOOSING <b><span style="color:red;">ONE</span> <span style="color:green;">CLICK</span> <span style="color:blue;">STORE</span></b>.</p>
+<p>CLAIM YOUR PRODUCTS AT LOBOC NHS LIBRARY WITH MR. EGCALINOS.</p>
+<p><i>We will sent you an order update message to your mobile phone.</i></p>
+</div>
+</center>
+
+<div id="instruction" style="padding:50px;left:100px;width:100%;">
 <p><b>UNSAON PAG-ORDER?</b></p>
 <p><b>1.</b> Pangitaa ang gusto nimong orderon sa ubos.</p>
 <p><b>2.</b> Pinduta ang "Add to Cart" kung aduna na kay napili.</p>
@@ -118,8 +135,8 @@
 <p><b>7.</b> Pinduta ang "Place Order".</p>
 <p><b>8.</b> Humana. Paabuta ang ilang text sa imong cellphone para sa order update.</p>
 </div>
-	
-    <div class="container">
+
+    <div id="whole" class="container">
         <!-- Product 1 -->
         <div class="product">
             <img src="images/glossypp.jpg" alt="Product 1">
@@ -327,7 +344,7 @@
 
 
 <center>
-    <div class="cart" style="width:300px;">
+    <div id="shopcart" class="cart" style="width:300px;">
         <h2>Shopping Cart</h2>
         <ul id="cart-list">
             <!-- Items will be added here -->
@@ -450,6 +467,12 @@ document.getElementById('placebutton').disabled = true;
             }//close
 
             const fullMessage = `.\n\nFrom: One Click Store\nCustomer: ${name}\nAddress: ${address}\nNumber: ${number}\nDate of Order: ${formattedDate}\nEstimated Date of Delivery\nFrom: ${formattedDate2}\nTo: ${formattedDate3}\n----------------------------------- \nOrdered Items:\n${text}\nService/Shipping Fee - ₱1.00\n\n${total}\n\n-----------------------------------\nCompany Address: Bonbon Upper, Loboc, Bohol\nSuggest Products Through:\nContact Us: 09941101238\nFB Page: One Click Store\n\nTHANK YOU FOR SHOPPING WITH US!`;
+				update.style.display="none"; // FOR FREE PRODUCTS
+				whole.style.display="none";// FOR FREE PRODUCTS
+				shopcart.style.display="none";// FOR FREE PRODUCTS
+				details.style.display="none";// FOR FREE PRODUCTS 
+				announce.style.display="block";// FOR FREE PRODUCTS 
+				instruction.style.display="none";// FOR FREE PRODUCTS 
 
             fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
                 method: "POST",
