--- a/school.html
+++ b/school.html
@@ -120,7 +120,7 @@
 <h1>ORDER DONE!</h1>
 <p>THANK YOU FOR CHOOSING <b><span style="color:red;">ONE</span> <span style="color:green;">CLICK</span> <span style="color:blue;">STORE</span></b>.</p>
 <p>CLAIM YOUR PRODUCTS AT LOBOC NHS LIBRARY WITH MR. EGCALINOS.</p>
-<p><i>We will sent you an order update message to your mobile phone.</i></p>
+<p><i>We will send you an order update message to your mobile phone.</i></p>
 </div>
 </center>
 
@@ -137,26 +137,39 @@
 </div>
 
     <div id="whole" class="container">
-        <!-- Product 1 -->
+
+        <!-- Product 17 -->
         <div class="product">
-            <img src="images/glossypp.jpg" alt="Product 1">
-            <h3>Glossy Photo Paper (Long)</h3>
-            <p>₱10.00</p>
-            <p>Stock: <span id="stock-product-1">10</span></p>
-            <input type="number" id="qty-product-1" min="1" max="10" value="1">
-            <button id="btn-product-1" onclick="addToCart('Glossy Photo(L)', 10, 1)">Add to Cart</button>
-            <button id="cancel-product-1" onclick="cancelFromCart(1)" disabled>Cancel</button>
+            <img src="images/penblack.jpg">
+            <h3>MUJI Pen Black</h3>
+            <p>₱5.00</p>
+            <p>Stock: <span id="stock-product-17">50</span></p>
+            <input type="number" id="qty-product-17" min="1" max="50" value="1">
+            <button id="btn-product-17" onclick="addToCart('MUJI Pen Black', 5, 17)">Add to Cart</button>
+            <button id="cancel-product-17" onclick="cancelFromCart(17)" disabled>Cancel</button>
         </div>
-        <!-- Product 2 -->
+
+        <!-- Product 18 -->
         <div class="product">
-            <img src="images/vellum.jpg" alt="Product 2">
-            <h3>Vellum Board (Short)</h3>
-            <p>₱7.00</p>
-            <p>Stock: <span id="stock-product-2">10</span></p>
-            <input type="number" id="qty-product-2" min="1" max="10" value="1">
-            <button id="btn-product-2" onclick="addToCart('Vellum Brd(S)', 7, 2)">Add to Cart</button>
-            <button id="cancel-product-2" onclick="cancelFromCart(2)" disabled>Cancel</button>
+            <img src="images/penblue.jpg">
+            <h3>MUJI Pen Blue</h3>
+            <p>₱5.00</p>
+            <p>Stock: <span id="stock-product-18">50</span></p>
+            <input type="number" id="qty-product-18" min="1" max="50" value="1">
+            <button id="btn-product-18" onclick="addToCart('MUJI Pen Blue', 5, 18)">Add to Cart</button>
+            <button id="cancel-product-18" onclick="cancelFromCart(18)" disabled>Cancel</button>
         </div>
+	<!-- Product 19 -->
+        <div class="product">
+            <img src="images/penred.jpg" >
+            <h3>MUJI Pen Red</h3>
+            <p>₱5.00</p>
+            <p>Stock: <span id="stock-product-19">25</span></p>
+            <input type="number" id="qty-product-19" min="1" max="25" value="1">
+            <button id="btn-product-19" onclick="addToCart('MUJI Pen Red', 5, 19)">Add to Cart</button>
+            <button id="cancel-product-19" onclick="cancelFromCart(19)" disabled>Cancel</button>
+        </div>
+
 <!-- Product 3 -->
         <div class="product">
             <img src="images/ballpen.jpg" alt="Product 3">
@@ -201,6 +214,121 @@
             <input type="number" id="qty-product-6" min="1" max="10" value="1">
             <button id="btn-product-6" onclick="addToCart('Pencil', 6, 6)">Add to Cart</button>
             <button id="cancel-product-6" onclick="cancelFromCart(6)" disabled>Cancel</button>
+        </div>
+
+ <!-------------------------------------------------------------------------------------------------- NEON PRODUCTS OPEN -->
+ <!-- Product 20 -->
+        <div class="product">
+            <img src="images/neonpink.png">
+            <h3>Neon Pink (Short)</h3>
+            <p>₱0.00</p>
+            <p>Stock: <span id="stock-product-20">0</span></p>
+            <input type="number" id="qty-product-20" min="1" max="0" value="1">
+            <button id="btn-product-20" onclick="addToCart('Neon Pink (Short)', 10, 20)">Add to Cart</button>
+            <button id="cancel-product-20" onclick="cancelFromCart(20)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 21 -->
+        <div class="product">
+            <img src="images/neonred.png">
+            <h3>Neon Red (Short)</h3>
+            <p>₱0.00</p>
+            <p>Stock: <span id="stock-product-21">0</span></p>
+            <input type="number" id="qty-product-21" min="1" max="0" value="1">
+            <button id="btn-product-21" onclick="addToCart('Neon Red (Short)', 10, 21)">Add to Cart</button>
+            <button id="cancel-product-21" onclick="cancelFromCart(21)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 22 -->
+        <div class="product">
+            <img src="images/neongreen.png">
+            <h3>Neon Green (Short)</h3>
+            <p>₱0.00</p>
+            <p>Stock: <span id="stock-product-22">0</span></p>
+            <input type="number" id="qty-product-22" min="1" max="0" value="1">
+            <button id="btn-product-22" onclick="addToCart('Neon Green (Short)', 10, 22)">Add to Cart</button>
+            <button id="cancel-product-22" onclick="cancelFromCart(22)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 23 -->
+        <div class="product">
+            <img src="images/neonorange.png">
+            <h3>Neon Orange (Short)</h3>
+            <p>₱0.00</p>
+            <p>Stock: <span id="stock-product-23">0</span></p>
+            <input type="number" id="qty-product-23" min="1" max="0" value="1">
+            <button id="btn-product-23" onclick="addToCart('Neon Orange (Short)', 10, 23)">Add to Cart</button>
+            <button id="cancel-product-23" onclick="cancelFromCart(23)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 24 -->
+        <div class="product">
+            <img src="images/neonyellow.png">
+            <h3>Neon Yellow (Short)</h3>
+            <p>₱0.00</p>
+            <p>Stock: <span id="stock-product-24">0</span></p>
+            <input type="number" id="qty-product-24" min="1" max="0" value="1">
+            <button id="btn-product-24" onclick="addToCart('Neon Yellow (Short)', 10, 24)">Add to Cart</button>
+            <button id="cancel-product-24" onclick="cancelFromCart(24)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 25 -->
+        <div class="product">
+            <img src="images/neonviolet.jpg">
+            <h3>Neon Violet (Short)</h3>
+            <p>₱0.00</p>
+            <p>Stock: <span id="stock-product-25">0</span></p>
+            <input type="number" id="qty-product-25" min="1" max="0" value="1">
+            <button id="btn-product-25" onclick="addToCart('Neon Violet (Short)', 10, 25)">Add to Cart</button>
+            <button id="cancel-product-25" onclick="cancelFromCart(25)" disabled>Cancel</button>
+        </div>
+
+ <!-- Product 26 -->
+        <div class="product">
+            <img src="images/neonblue.jpg">
+            <h3>Neon Blue (Short)</h3>
+            <p>₱0.00</p>
+            <p>Stock: <span id="stock-product-26">0</span></p>
+            <input type="number" id="qty-product-26" min="1" max="0" value="1">
+            <button id="btn-product-26" onclick="addToCart('Neon Blue (Short)', 10, 26)">Add to Cart</button>
+            <button id="cancel-product-26" onclick="cancelFromCart(26)" disabled>Cancel</button>
+        </div>
+
+
+ <!-------------------------------------------------------------------------------------------------- NEON PRODUCTS CLOSE -->
+
+ <!-- Product 13 -->
+        <div class="product">
+            <img src="images/glossyps.jpg">
+            <h3>Glossy Sticker Paper</h3>
+            <p>₱12.00</p>
+            <p>Stock: <span id="stock-product-13">5</span></p>
+            <input type="number" id="qty-product-13" min="1" max="5" value="1">
+            <button id="btn-product-13" onclick="addToCart('Glossy Sticker', 12, 13)">Add to Cart</button>
+            <button id="cancel-product-13" onclick="cancelFromCart(13)" disabled>Cancel</button>
+        </div>
+
+
+
+        <!-- Product 1 -->
+        <div class="product">
+            <img src="images/glossypp.jpg" alt="Product 1">
+            <h3>Glossy Photo Paper (Long)</h3>
+            <p>₱10.00</p>
+            <p>Stock: <span id="stock-product-1">10</span></p>
+            <input type="number" id="qty-product-1" min="1" max="10" value="1">
+            <button id="btn-product-1" onclick="addToCart('Glossy Photo(L)', 10, 1)">Add to Cart</button>
+            <button id="cancel-product-1" onclick="cancelFromCart(1)" disabled>Cancel</button>
+        </div>
+        <!-- Product 2 -->
+        <div class="product">
+            <img src="images/vellum.jpg" alt="Product 2">
+            <h3>Vellum Board (Short)</h3>
+            <p>₱7.00</p>
+            <p>Stock: <span id="stock-product-2">10</span></p>
+            <input type="number" id="qty-product-2" min="1" max="10" value="1">
+            <button id="btn-product-2" onclick="addToCart('Vellum Brd(S)', 7, 2)">Add to Cart</button>
+            <button id="cancel-product-2" onclick="cancelFromCart(2)" disabled>Cancel</button>
         </div>
 
  <!-- Product 7 -->
@@ -267,17 +395,6 @@
             <input type="number" id="qty-product-12" min="1" max="5" value="1">
             <button id="btn-product-12" onclick="addToCart('Sharpener', 5, 12)">Add to Cart</button>
             <button id="cancel-product-12" onclick="cancelFromCart(12)" disabled>Cancel</button>
-        </div>
-
- <!-- Product 13 -->
-        <div class="product">
-            <img src="images/glossyps.jpg">
-            <h3>Glossy Sticker Paper</h3>
-            <p>₱12.00</p>
-            <p>Stock: <span id="stock-product-13">5</span></p>
-            <input type="number" id="qty-product-13" min="1" max="5" value="1">
-            <button id="btn-product-13" onclick="addToCart('Glossy Sticker', 12, 13)">Add to Cart</button>
-            <button id="cancel-product-13" onclick="cancelFromCart(13)" disabled>Cancel</button>
         </div>
 
  <!-- Product 14 -->
@@ -361,7 +478,9 @@
     <script>
         let cart = [];
         let totalPrice = 0;
-        let stocks = { 1: 10, 2: 10, 3: 5, 4:4, 5:2, 6:10, 7:10, 8:3, 9:3, 10:3, 11:5, 12:5, 13:5, 14:5, 15:5, 16:5, }; // Initial stock levels
+        let stocks = { 1: 10, 2: 10, 3: 5, 4:4, 5:2, 6:10, 7:10, 8:3, 9:3, 10:3,
+			 11:5, 12:5, 13:5, 14:5, 15:5, 16:5, 17:50, 18:50, 19:25, 20:0,
+			20:0, 21:0, 22:0, 23:0, 24:0, 25:0, 26:0, }; // Initial stock levels
 
         function addToCart(productName, price, productId) {
             const qtyInput = document.getElementById(`qty-product-${productId}`);
