--- a/school.html
+++ b/school.html
@@ -110,7 +110,7 @@
 <center>
 <div id="update" style="width:100%;color:red;">
 <h1>(NEW ANNOUNCEMENT)</h1>
-<h1>Ten costumers  per day will received 1 FREE product.</h1>
+<h1>Ten costumers  per day will receive 1 FREE product.</h1>
 <h1>Starting from December 2-5, 2024</h1>
 </div>
 </center>
